<?xml version="1.0"?>
<package>
  <name>suzanne_robot_controller</name>
  <version>0.0.0</version>
  <description>The suzanne_robot_controller package</description>
  <maintainer email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf2</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>