<?xml version="1.0"?>
<package>
  <name>suzanne_robot_description</name>
  <version>0.0.1</version>
  <description>The suzanne_robot_description package</description>

  <maintainer email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>xacro</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <gazebo_ros
	gazebo_media_path="${prefix}/.." 
	gazebo_plugin_path="${prefix}/lib"  
	gazebo_model_path="${prefix}/.."  
	gazebo_resource_path="${prefix}/.."  />
  </export>
</package>